# from-scratch

./: .gitignore  README.md  docs.py
.github/workflows/: ci.yml
CYK/: main.ml  run.sh
DNS-go/: README.md
DNS-go/app/: main.go  message.go  utils.go
DNS-go/tests/: header_test.sh
FLAT/CYK/: CFG_to_CNF.md  readme.md
FLAT/DFA-NFA/: build.zig  build.zig.zon  input.txt  readme.md
FLAT/DFA-NFA/src/: main.zig
Memory-Allocator/: lib.c  lib.h  main.c  readme.md  run.sh
Networking/TCP/: Makefile  client.c  dummy.txt  readme.md  server.c
Networking/UDP/: Makefile  client.c  dummy.txt  readme.md  server.c
OpenGL/: CMakeLists.txt  flake.nix  readme.md
RegexMatcher/: main.c
cryptography/Set-1/: break_repeated_key_xor.py  detect_single_char_xor.py  detect_single_output.txt  fixed_xor.py  hex_to_base64.c  repeated_xor.py  single_byte_xor_cipher.py
garbage-collector/: minimalVM.c
go-shell/: go.mod  main.go
neuralnet/: model.ipynb  requirements.txt
rate-limiter/: go.mod  main.go  readme.md
rate-limiter/cmd/: limiter.go  middleware.go  tokenRefill.go
rd-analyser/: Cargo.toml
rd-analyser/src/: main.rs
rust-atomics-and-locks/atomics/: Cargo.toml
rust-atomics-and-locks/atomics/src/: main.rs
rust-atomics-and-locks/basics/src/: main.rs
utero/: Cargo.toml  README.md
utero/examples/: test.utr
utero/src/: ast.rs  eval.rs  lexer.rs  main.rs
utero/src/parser/: mod.rs
